@@ -1,3 +1,11 @@
+2007-08-15  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (ADDI_R12_R12, LD_R11_0R2, LD_R2_0R2): Define.
+	Update stub comments.
+	(build_plt_stub): Build two variants, one without "addis".
+	(ppc_build_one_stub): Build stubs without "addis" if possible.
+	(ppc_size_one_stub): Size new stubs.
+
 2007-08-12  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* coffgen.c (coff_get_normalized_symtab): Correct cast.
